@@ -3,6 +3,9 @@ VERSION 0.0.10
 IN PROGRESS...
 
 * Extended dialog system. Dialogs can now have different initial statements, based on world state
++ New animated popup for planet landing. As landscape generation can take up to a minute, user must be sure
+that the game has not hanged up.
++ Added plants to planet surface
 
 =====================================================
 VERSION 0.0.9
